# orbits

./: .gitignore  .gitmodules  .mcp.json  AGENTS.md  MANUAL.md  README.md  completed.md  opencode.json  orbit.json  progress.txt  pyproject.toml  session2026-04-14_contract.md
.claude/: settings.json
.claude/agents/: analyst.md  architect.md  code-reviewer.md  code-simplifier.md  critic.md  debugger.md  designer.md  document-specialist.md  executor.md  explore.md  git-master.md  memory-curator.md  planner.md  qa-tester.md  scientist.md  security-reviewer.md  test-engineer.md  tracer.md  verifier.md  writer.md
.claude/commands/: knowledge-sync.md  recall.md  remember.md
.claude/hooks/: hooks.json  post_tool_use.sh  session_start.sh  user_prompt_submit.sh
.claude/skills/: ask  (+37 more)
.omc/: prd.json  project-memory.json
orbits/: __init__.py  config.json
orchestration/: config.py  gemini.py  memory.py  ram_manager.py  recall_injector.py
orchestrator/: .env.example  USER_MANUAL.md  main.py  requirements.txt
scripts/: bootstrap.sh  doctor.sh  knowledge_backup.py  knowledge_ingest.py  launch_orbits.sh  link_omc.sh  opencode_jsonl_wrapper.py  ram_manager.py  ram_watchdog.sh  token_tracker.py  verify_repo_isolation.py
tests/: test_agent1_executor_modes.py  test_agent2_knowledge.py  test_brain.py  test_bus_journaling.py  test_daemon_monitor.py  test_full_handoff_drill.py  test_gemini.py  test_handoff_store.py  test_interface_router.py  test_knowledge_backup.py  test_memory.py  test_model_oracle.py  test_opencode_jsonl_wrapper.py  test_orbits_cli.py  test_ram_manager.py
(+50 files in other folders)
